packages/frontend/src/app/modules/search/components/search-place-result/search-place-result.component.css
/*
 * Soliguide: Useful information for those who need it
 *
 * SPDX-FileCopyrightText: © 2024 Solinum
 *
 * SPDX-License-Identifier: AGPL-3.0-only
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published
 * by the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */
.place_result_title {
  display: block;
  width: 100%;
  text-decoration: none;
}

.place_result__thermal-comfort {
  display: block;
}

.item_number {
  display: inline-block;
  vertical-align: top;
  font-weight: bold;
  color: white;
  border-radius: 200px;
  background-color: var(--bs-primary) !important;
  min-width: max-content;
}

.place_result_address {
  color: var(--bs-gray-400);
}

.place_result_description {
  line-height: 1.5rem;
  text-align: left;
  word-break: break-word;
  color: var(--bs-gray);
}

.place_result_services {
  line-height: 1.5rem;
  color: var(--bs-primary);
}

.description-title,
.service-title {
  font-size: 1.2rem;
}

.place_result_distance {
  line-height: 1.5rem;
  text-align: right;
  word-break: break-word;
  color: white;
}

.place_result_name,
.place_result_name a {
  font-size: 1.25rem;
  font-weight: 600;
  text-align: left;
  letter-spacing: 0.5px;
  color: white;
}

.place_result {
  position: relative;
  overflow: hidden;
  min-height: 240px;
  width: 100%;
  border-radius: 8px;
  background: white;
  display: block;
  text-align: left;
  transition: all 0.5s;
  box-shadow: 0px 6px 6px 0px rgba(62, 58, 113, 0.1);
}

.place_result:hover,
.place_result_hover:hover {
  box-shadow: var(--bs-gray-darker);
}

.orga-name {
  color: var(--bs-gray);
}

.category-icon {
  vertical-align: middle;
  color: var(--bs-primary);
  font-size: 1.8rem;
}

.place_result.draft,
.place_result.offline {
  z-index: 1;
}

@media (max-width: 500px) {
  .place_result {
    padding-left: 0;
    padding-right: 0;
  }
}

.permanently-closed {
  color: var(--bs-black) !important;
  opacity: 0.6;
}

.open-card-header {
  background-color: var(--bs-primary);
}

.card-header {
  cursor: pointer;
}

.distance_icon {
  color: var(--bs-secondary);
}

.dropdown-toggle {
  height: 2.5rem;
}

.phone-dropdown {
  color: var(--bs-primary);
}
.status-dot {
  width: 8px;
  height: 8px;
  border-radius: 9999px;
  background-color: var(--bs-teal);
}

.status-dot {
  background: black;
  border-radius: 50%;
  box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
  height: 10px;
  width: 10px;
  transform: scale(1);
  animation: pulse-black 2s infinite;
}

.status-dot.green {
  background: #1cb702;
  box-shadow: 0 0 0 0 rgba(51, 217, 178, 1);
  animation: pulse-green 2s infinite;
}

@keyframes pulse-green {
  0% {
    transform: scale(0.95);
    box-shadow: 0 0 0 0 rgba(51, 217, 178, 0.7);
  }

  70% {
    transform: scale(1);
    box-shadow: 0 0 0 10px rgba(51, 217, 178, 0);
  }

  100% {
    transform: scale(0.95);
    box-shadow: 0 0 0 0 rgba(51, 217, 178, 0);
  }
}

.draft-title {
  color: var(--bs-primary) !important;
}

.alert-custom {
  border-radius: var(--radius-400, 1rem);
  display: inline-flex;
  padding: 0.25rem 0.5rem;
  align-items: center;
  gap: 0.5rem;
  font-weight: bold;
}

.alert-open {
  background-color: #abf59f;
}

